--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698192853-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698192853-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbia, MO, USA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -183,7 +183,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/ctc/job/c3hdsq1tub8rinwhinwya1fcne'>Speech Language Pathologist | CTC Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/c3hdsq1tub8rinwhinwya1fcne'>Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -218,7 +218,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p>1 day ago ... Title: Speech-Language Pathologist Clinical Fellowship. ID: 7048-GAD. Location: 
 Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://centersforcare.applytojob.com/apply/TXzeZBRKjd/Speech-Language-Pathologist-SLP'>Speech Language Pathologist  (SLP) - Centers Health Care - Career Page</a></h5> 
+<h5><a href='http://centersforcare.applytojob.com/apply/TXzeZBRKjd/Speech-Language-Pathologist-SLP'>Speech Language Pathologist  (SLP) - Centers Health Care - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -260,7 +260,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 physician practices, and services. Expanding across Virginia, West Virginia, and
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4485453002'>Job Application for ST, Speech Therapist, Senior Living at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4485453002'>Job Application for ST, Speech Therapist, Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Winston Salem, NC</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -268,7 +268,7 @@ physician practices, and services. Expanding across Virginia, West Virginia, and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999697506672-speech-language-pathologists'>Hearing and Speech Center of Florida Speech Language Pathologists | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999697506672-speech-language-pathologists'>Hearing and Speech Center of Florida Speech Language Pathologists | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FLUnited States</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -285,7 +285,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://cdu.referrals.selectminds.com/jobs/lecturer-senior-lecturer-speech-language-therapy-321'>Lecturer/Senior Lecturer - Speech & Language Therapy - CDU Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdu.referrals.selectminds.com/jobs/lecturer-senior-lecturer-speech-language-therapy-321'>Lecturer/Senior Lecturer - Speech & Language Therapy - CDU Careers</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -361,7 +361,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States  Naples, FL</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/onMUafwX'>IDEA Public Schools Careers - Speech Language Pathologist (Immediate Opening)</a></h5> 
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -401,7 +401,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-22783'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/speech-language-pathologist-22783'>Speech Language Pathologist - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -425,7 +425,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Montgomery</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4463532002'>Job Application for Speech Language Pathologist (SLP) - Per Diem at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4463532002'>Job Application for Speech Language Pathologist (SLP) - Per Diem at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Hagerstown, MD</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
